# sport-complex-pro

./: .env.example  .gitignore  DEPLOY_GITHUB_PAGES.md  README.md  RUN_LOCALLY.md  SETUP_GUIDE.md  api.js  app.jsx  deploy.sh  index.css  index.html  package.json  run-local-dev.sh  start-dev.sh  start.sh  vite.config.js  Теоретическая_часть_курсовой.md
backend/: Cargo.toml  README.md  data.db  deploy.sh
components/: Sidebar.jsx  StatCard.jsx  TopNav.jsx
coursework_docs/: 00_Состав_пакета_КП.md  01_Аннотация.md  02_План_график.md  03_Пояснительная_записка.md  04_Руководство_пользователя.md  05_Руководство_администратора.md  06_Тест_кейсы.md  07_UML_диаграммы.md  08_Функциональные_модели_IDEF_BPMN.md  09_Архитектура_и_взаимодействие_модулей.md  10_ER_и_модель_данных.md  11_Блок_схемы_алгоритмов.md  12_Чеклист_скриншотов.md  13_Структура_презентации.md  14_Реальные_диаграммы_индекс.md  16_SQL_схема_БД.sql  README.md  КП_Комплект_документации.txt
frontend/: api.js  apiClient.js  app.jsx  deploy.sh  index.css  index.html  main.jsx  package-lock.json  package.json  tailwind.config.js  vite.config.js
pages/: Analytics.jsx  Auth.jsx  Bookings.jsx  Calendar.jsx  Classes.jsx  Client.jsx  Crm.jsx  Dashboard.jsx  DatabaseAdmin.jsx  Deals.jsx  Forecast.jsx  Members.jsx  Memberships.jsx  Notifications.jsx  Payments.jsx  Reports.jsx  Search.jsx  Trainers.jsx  Users.jsx
public/: vkid-sdk.js
rust-server/: Cargo.toml  README.md
rust-server/src/: main.rs
server/: data.db  db.js  index.js  package-lock.json  package.json
utils/: excel.js
vk-valentines/: package-lock.json  (+1 more)
(+46 files in other folders)
