[package]
name = "sport-complex-pro-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
http = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
